# fastapi-template

./: .dockerignore  Dockerfile  pyproject.toml
app/: __init__.py  main.py  run.py
app/features/metrics/: sleep.py
app/features/user/: models.py  router.py  routes.py
app/infra/: log.py  observable.py  orm.py  redis.py  request_id.py  settings.py
app/shared/: error.py  rest.py
devops/: entry.sh  supervisor.conf
scripts/: dev.bat
