[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-tortoiseorm>=0.55b1",
    "opentelemetry-sdk>=1.34.1",
    "python-dotenv>=1.1.0",
    "tortoise-orm[asyncmy]>=0.25.1",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-asyncio>=1.0.0", "ruff>=0.12.0"]

[[tool.uv.index]]
name = 'ali'
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.ruff]
lint.select = ["I"]
